--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,15 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Awards & Honors"
+    url: /awards/    
+
   - title: "Talks"
     url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Teaching & Services"
+    url: /teaching/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
-    url: /cv/
+    url: https://cjh7.github.io/files/CV_HyunwooShin.pdf
     
-  - title: "Guide"
-    url: /markdown/
