--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,5 @@ main:
     url: /teaching/
         
   - title: "CV"
-    url: https://cjh7.github.io/files/CV_HyunwooShin.pdf
+    url: https://Hyunwoo-Shin.github.io/files/CV_HyunwooShin.pdf
     
