--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Hyunwoo Shin"
 title_separator          : "-"
 name                     : &name "Hyunwoo Shin"
-description              : &description "Ph.D. Candidate, Department of Industrial and Systems Engineering, Virginia Tech"
+description              : &description "Ph.D. Candidate, Grado Department of Industrial and Systems Engineering, Virginia Tech"
 url                      : https://Hyunwoo-Shin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/Hyunwoo-Shin.github.io"
