--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hyunwoo Shin"
   avatar           : "profile.png"
-  bio              : "Ph.D. candidate, Department of Industrial and Systems Engineering, Virginia Tech"
+  bio              : "Ph.D. Candidate, Grado Department of Industrial and Systems Engineering, Virginia Tech"
   location         : "Blacksburg, VA"
   employer         :
   pubmed           : 
