--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hyunwoo Shin"
-  avatar           : "profile.png"
+  avatar           : "HyunwooShin.jpg"
   bio              : "Ph.D. Candidate, Grado Department of Industrial and Systems Engineering, Virginia Tech"
   location         : "Blacksburg, VA"
   employer         :
