--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Talks"
     url: /talks/    
     
-  - title: "Teaching & Services"
-    url: /teaching/
+  - title: "Experience"
+    url: /experience/
         
   - title: "CV"
     url: https://Hyunwoo-Shin.github.io/files/CV_HyunwooShin.pdf
